# morphling

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ACTUAL_MESSAGE_SIZE_TEST.md  ANALYSIS_RECEIVE_UPLOAD_TIMING.md  CITATION.cff  CLAUDE.md  CMAKE_BUILD_CONFIG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONNECTION_CLEANUP_ANALYSIS.md  CONNECTION_MONITORING_IMPLEMENTED.md  CONTRIBUTING.md  CRITICAL_BUG_ANALYSIS.md  DECISION_GUIDE.md  DEVICE_FAILURE_DEADLOCK_FIX.md  DEVICE_FAILURE_HANG_ANALYSIS.md  DEV_README.md  DIAGNOSIS.md  DOCKER.md  Dockerfile  EARLIEST_vs_LATEST.md  FLATBUFFERS_COMPLETE_SUMMARY.md  FORMAT_ALIGNMENT_VERIFICATION.md  GEMM_ID_ISSUES.md  LICENSE  MANIFEST.in  Makefile  NETSTAT_GUIDE.md  NOTICE  PRECISE_FIX_GUIDE.md  PYTHON_VS_REAL_PERFORMANCE.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.py  README.md  ROOT_CAUSE_ANALYSIS.md  SECURITY.md  SERIALIZATION_PERF_TEST.md  (+29 more)
baselines/: .dockerignore  Confident-production-FIXED (1) copy 2 (1).ipynb  Dockerfile  README.md  __init__.py  asteroid (1).py  docker-compose.yaml  dtfm_gpt2_train copy (1).py  experiments-memory.db  experiments.db  hpp_plan.json  layer_profiles_report.md  pyproject.toml  train.py
baselines/communication/: __init__.py  gloo.py  nccl.py  nccl_functional.py  torch_dist.py
baselines/configs/: asteroid_default.yaml  confident_default.yaml  dtfm_default.yaml
baselines/core/: __init__.py  communication.py  compute.py  config.py  fault_tolerance.py  optimizer.py  orchestrator.py  pipeline_schedule.py  profiler.py  scheduler.py  state.py
baselines/deploy_asteroid/: ansible.cfg  bootstrap_nodes.yaml  cluster.conf  containerd-nvidia.toml.tmpl  distribute_image.yaml  generate_manifests.py  inventory.ini  inventory.ini.template  join_new_workers.yaml  profile_and_gather.yaml  profile_layers_and_gather.yaml  secrets.yml.template  setup_cluster.yml  setup_gpu.yaml  setup_k3s.yaml
baselines/deploy_asteroid/files/: iperf_server.service
baselines/deploy_asteroid/templates/: configmap.yaml.j2  headless_service.yaml.j2  stage_job.yaml.j2
baselines/deploy_asteroid/vars/: pytorch_sources.yml
baselines/docs/: PRD_experiment_schema.md  PRD_memory_constraints.md  PRD_mps_wiring.md  PR_short_change_report.md  layer_profiles_report.md  prd_nonuniform_dp.md  prd_train_overhead_fixes.md
baselines/examples/: LLAMA_SST_GUIDE.md  analyze_violations.py  llama_sst_single_gpu.py  run_llama_sst.sh  train_gpt2_dtfm.py  train_llama_asteroid.py
baselines/examples/gemm_intercept/: README.md  gemm_intercept.c
baselines/experiment_data/: progress.json
baselines/experiment_data/00626d07bb3912c0/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/036106798c18df36/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/0bf7a150900403e2/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/16ce29d7a9324df5/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/231a6d1831db31aa/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/264112f7ac6e71ed/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/2ae219bc481d5fcd/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/3199ad24dd582712/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/31ebcc6a6cb6c0ce/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  rank_7.jsonl
baselines/experiment_data/3268db1e53da9e65/: rank_0.jsonl  rank_1.jsonl  rank_2.jsonl  rank_3.jsonl  rank_4.jsonl  rank_5.jsonl  rank_6.jsonl  (+1 more)
baselines/fault_tolerance/: __init__.py  async_checkpoint.py  basic_checkpoint.py  heartbeat.py  passive_timeout.py  replication.py
baselines/models/: __init__.py  bert.py  gpt2.py  hf_adapter.py  llama.py  opt.py  registry.py  stage.py
baselines/profiles/: profile_ubuntu-2404-desktop-template_rank0.json  profile_ubuntu-2404-desktop-template_rank1.json  profile_ubuntu-2404-desktop-template_rank3.json  profile_ubuntu-2404-desktop-template_rank4.json  profile_ubuntu-2404-desktop-template_rank5.json  profile_ubuntu-2404-desktop-template_rank6.json  profile_ubuntu-2404-desktop-template_rank7.json  profile_ubuntu_rank2.json
baselines/schedulers/: __init__.py  asteroid_planner.py  confident_scheduler.py  dp_partitioner.py  gcma.py
baselines/scripts/: deploy_asteroid.sh  export_layer_profiles_md.py  export_metrics_tables_md.py  install_asteroid.sh  launch_docker.sh  launch_single_node.sh  launch_ssh.sh  launch_torchrun.sh  measure_bandwidth.sh  monitor_asteroid.sh  plot_unique_node_config_counts.py  profile_node.py  run_asteroid_planner.py  run_experiments.py  run_experiments_plan_only.py  stitch_metrics.py
baselines/strategies/: __init__.py  asteroid_strategy.py  base.py  confident_strategy.py  dtfm_strategy.py
baselines/utils/: __init__.py  config_loader.py  flatten.py  logging.py  lr_schedule.py  metrics.py  mps.py  seed.py
ctests/: CMakeLists.txt  test_ipc_unified_reader.cpp  test_ipc_unified_writer.cpp
tests/cpp/: CMakeLists.txt  README.md  bench_xtgemm_worker.cpp  echo_client_test.cc  echo_server_libuv.cc  echo_server_test.cc  test_blas_gemm.cpp  test_cublas_hostalloc_direct.cpp  test_cublas_hostregister_posix.cpp  test_cuda_host_register_tensor.cpp  test_matrix_partition.cpp  test_memcpy_bw.cpp  test_pin_thread_perf.cpp  test_rc_copy.cpp  test_shared_pin_memory.cpp  test_simd_copy.cpp  test_splice_copy.cpp  test_stream_copy.cpp  test_torch_layout.cpp  test_umpire_mempool.cpp  test_uuid.cpp
(+1258 files in other folders)
