[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake>=3.20",
    "ninja",
    "protobuf>=4.21.6,<7"
]
build-backend = "setuptools.build_meta"

[project]
name = "morphling"
version = "0.0.1"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
    "pytest",
    "accelerate>=0.27.2",
    "transformers>=4.37.2",
    "parameterized",
]

[project.scripts]
morphling_emulator = "morphling.entrypoint.emulator:main"
morphling_device_config = "morphling.entrypoint.generate_device_config:main"
morphling_device = "morphling.entrypoint.run_device:main"
morphling_cmd = "morphling.entrypoint.cmdline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
morphling = [
    "py.typed",
    "*.so",
    "morphling_worker_server",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.cmdclass]
build_ext = "_setup_helpers.cmake_build_ext"
build_package_protos = "_setup_helpers.BuildPackageProtos"
install = "_setup_helpers.CustomInstall"
sdist = "_setup_helpers.CustomBuild"
bdist_wheel = "_setup_helpers.CustomBdistWheel"

[tool.ruff]
line-length = 80
exclude = []

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = [
    # star imports
    "F405",
    "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # raise distinguish errors
    "B904",
    # f-string format
    "UP032",
]
select = [
    # isort
    "I",
]
ignore = [
    # Loop control variable not used within loop body
    "B007"
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["smoke: Fast CI tests (<2min)", "deep: Slow GPU tests (<30min)"]
