[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake>=3.20",
    "ninja",
    "protobuf>=4.21.6,<7"
]
build-backend = "setuptools.build_meta"

[project]
name = "morphling"
version = "0.0.1"
description = "Morphling: an emulator for distributed machine-learning training on heterogeneous edge devices (EdgeSys '26 companion code)."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "The Morphling Authors" },
]
keywords = [
    "distributed-training",
    "edge-computing",
    "gpu-emulation",
    "cuda",
    "green-context",
    "research",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Intended Audience :: Science/Research",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/drunkcoding/DeviceEmulator"
Documentation = "https://github.com/drunkcoding/DeviceEmulator#readme"
Source = "https://github.com/drunkcoding/DeviceEmulator"
Issues = "https://github.com/drunkcoding/DeviceEmulator/issues"
Paper = "https://doi.org/10.1145/3812836.3814779"

[project.optional-dependencies]
test = [
    "pytest",
    "accelerate>=0.27.2",
    "transformers>=5.12.1",
    "parameterized",
]

[project.scripts]
morphling_emulator = "morphling.entrypoint.emulator:main"
morphling_device_config = "morphling.entrypoint.generate_device_config:main"
morphling_device = "morphling.entrypoint.run_device:main"
morphling_cmd = "morphling.entrypoint.cmdline:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
morphling = [
    "py.typed",
    "*.so",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.cmdclass]
build_ext = "_setup_helpers.cmake_build_ext"
build_package_protos = "_setup_helpers.BuildPackageProtos"
install = "_setup_helpers.CustomInstall"
sdist = "_setup_helpers.CustomBuild"
bdist_wheel = "_setup_helpers.CustomBdistWheel"

[tool.ruff]
line-length = 80
exclude = []

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = [
    # star imports
    "F405",
    "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # raise distinguish errors
    "B904",
    # f-string format
    "UP032",
]
select = [
    # isort
    "I",
]
ignore = [
    # Loop control variable not used within loop body
    "B007"
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "smoke: Fast CI tests (<2min)",
    "deep: Slow GPU tests (<30min)",
    "benchmark: Microbenchmarks (opt out via -m 'not benchmark')",
]
